polishing in tests