@@ -55,7 +55,10 @@ testing {
             targets {
                 all {
                     testTask.configure {
-                        jvmArgs = listOf("-XX:+AllowRedefinitionToAddDeleteMethods")
+                        jvmArgs = listOf(
+                            "-XX:+AllowRedefinitionToAddDeleteMethods",
+                            "-XX:+EnableDynamicAgentLoading"
+                        )
 
                         shouldRunAfter(test)
                     }
@@ -85,7 +88,10 @@ testing {
             targets {
                 all {
                     testTask.configure {
-                        jvmArgs = listOf("-XX:+AllowRedefinitionToAddDeleteMethods")
+                        jvmArgs = listOf(
+                            "-XX:+AllowRedefinitionToAddDeleteMethods",
+                            "-XX:+EnableDynamicAgentLoading"
+                        )
 
                         shouldRunAfter(componentTest)
                         mustRunAfter(":showcase-command-service:integrationTest")
