@@ -67,7 +67,10 @@ testing {
             targets {
                 all {
                     testTask.configure {
-                        jvmArgs = listOf("-XX:+AllowRedefinitionToAddDeleteMethods")
+                        jvmArgs = listOf(
+                            "-XX:+AllowRedefinitionToAddDeleteMethods",
+                            "-XX:+EnableDynamicAgentLoading"
+                        )
 
                         shouldRunAfter(test)
                     }
@@ -108,7 +111,10 @@ testing {
             targets {
                 all {
                     testTask.configure {
-                        jvmArgs = listOf("-XX:+AllowRedefinitionToAddDeleteMethods")
+                        jvmArgs = listOf(
+                            "-XX:+AllowRedefinitionToAddDeleteMethods",
+                            "-XX:+EnableDynamicAgentLoading"
+                        )
 
                         shouldRunAfter(componentTest)
 
